// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardList /> should render a collection on 3column 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 3 - 2 * 1rem);
  margin: 1rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c4 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

@media (max-width:980px) {
  .c2 {
    width: calc( 100% / 2 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c2 {
    width: calc( 100% - 1 * 1rem );
  }
}

<div>
  <div>
    <h2
      class="c0"
    >
      Hello
    </h2>
    
  </div>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 1
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 2
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 3
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 4
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 5
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 6
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 7
        </div>
        
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c4 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

@media (max-width:980px) {
  .c2 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c2 {
    width: calc( 100% - 2 * 1rem );
  }
}

<div>
  <div>
    <h2
      class="c0"
    >
      Hello
    </h2>
    
  </div>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 1
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 2
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 3
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 4
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 5
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 6
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 7
        </div>
        
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title and description 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c4 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

@media (max-width:980px) {
  .c2 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c2 {
    width: calc( 100% - 2 * 1rem );
  }
}

<div>
  <div>
    <h2
      class="c0"
    >
      Hello
    </h2>
    <div>
      Hello Tiles
    </div>
  </div>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 1
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 2
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 3
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 4
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 5
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 6
        </div>
        
      </button>
    </li>
    <li
      class="c2"
    >
      <button
        class="c3"
        href=""
      >
        <div
          class="c4"
        >
          Title 7
        </div>
        
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a collection with a title with a link and a desc 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #2f3b6c;
  font-weight: normal;
  font-family: "Merriweather",serif;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:hover {
  color: #2f3b6c;
}

.c3 {
  margin-left: 1.6rem;
  color: #7598d6;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c1:hover .c3 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c7 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

@media (max-width:980px) {
  .c5 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c5 {
    width: calc( 100% - 2 * 1rem );
  }
}

<div>
  <div>
    <h2
      class="c0"
    >
      <a
        class="c1 c2"
        href="https://code.travail.gouv.fr"
        title="le code du travail numérique"
      >
        CDTN
        <svg
          aria-hidden="true"
          class="c3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </a>
    </h2>
    <div>
      le code du travail numérique
    </div>
  </div>
  <ul
    class="c4"
  >
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 1
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 2
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 3
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 4
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 5
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 6
        </div>
        
      </button>
    </li>
    <li
      class="c5"
    >
      <button
        class="c6"
        href=""
      >
        <div
          class="c7"
        >
          Title 7
        </div>
        
      </button>
    </li>
  </ul>
</div>
`;

exports[`<CardList /> should render a signle title 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-top: 2rem;
  margin-right: calc(-1 * 1rem);
  margin-bottom: 3.2rem;
  margin-left: calc(-1 * 1rem);
  padding: 0;
  list-style-type: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  width: calc(100% / 4 - 2 * 1rem);
  margin: 1rem;
}

.c0 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  font-size: 3rem;
}

.c3 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem 2.4rem;
  color: #3e486e;
  font-weight: 600;
  font-size: 1.8rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:hover {
  color: #3e486e;
  border-color: #3e486e;
  box-shadow: 0px 10px 50px rgba(85,112,160,0.12),0px 10px 15px rgba(85,112,160,0.1);
}

.c4 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

@media (max-width:980px) {
  .c2 {
    width: calc( 100% / 3 - 2 * 1rem );
  }
}

@media (max-width:600px) {
  .c2 {
    width: calc( 100% - 2 * 1rem );
  }
}

<div>
  <div>
    <h2
      class="c0"
    >
      Hello
    </h2>
    
  </div>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <a
        class="c3"
        href="#"
      >
        <div
          class="c4"
        >
          coucou
        </div>
        
      </a>
    </li>
  </ul>
</div>
`;
